--- a/l2-norm.cabal
+++ b/l2-norm.cabal
@@ -17,12 +17,15 @@ extra-source-files:
 
 executable L2
     main-is:          L2.hs
+    ghc-options: -O2 -threaded -with-rtsopts=-N
     build-depends:    base >=4.9
                     , vector
+                    , monad-par
+                    , abstract-par
     default-language: Haskell2010
 
-executable L2Opt
-    main-is:          L2Opt.hs
+executable L2Spec
+    main-is:          L2Spec.hs
     build-depends:    base >=4.9
                     , vector
     default-language: Haskell2010
