--- a/l2-norm.cabal
+++ b/l2-norm.cabal
@@ -17,7 +17,7 @@ extra-source-files:
 
 executable L2
     main-is:          L2.hs
-    ghc-options: -O2 -threaded -with-rtsopts=-N
+    ghc-options: -O2 -threaded -rtsopts -with-rtsopts=-N
     build-depends:    base >=4.9
                     , vector
                     , monad-par
