--- a/l2-norm.cabal
+++ b/l2-norm.cabal
@@ -2,7 +2,7 @@ cabal-version:      2.4
 name:               l2-norm
 version:            0.2.0.0
 
-synopsis: L_n matrix norm calculation
+synopsis: L_k matrix norm calculation
 homepage:    https://github.com/divipp/l2-norm
 bug-reports: https://github.com/divipp/l2-norm/issues
 
@@ -16,7 +16,7 @@ extra-source-files:
     README.md
 
 executable Ln
-    main-is:          Ln.hs
+    main-is:          Lk.hs
     ghc-options: -O2 -threaded -rtsopts -with-rtsopts=-N
     build-depends:    base >=4.9
                     , vector
