--- a/l2-norm.cabal
+++ b/l2-norm.cabal
@@ -15,7 +15,7 @@ category:           Math
 extra-source-files:
     README.md
 
-executable Ln
+executable Lk
     main-is:          Lk.hs
     ghc-options: -O2 -threaded -rtsopts -with-rtsopts=-N
     build-depends:    base >=4.9
